Style: fix image to align center

--- a/src/app/aboutUs/about/about.component.css
+++ b/src/app/aboutUs/about/about.component.css
@@ -53,4 +53,7 @@ h2{
         font-size: 18px;
         line-height: 36px;
     }
+    .img-responsive{
+        text-align: center;
+    }
 }
